--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #e2c198;
+    background-color: #ddd3c8;
   }
   
   .form-signin {
