--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ body {
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #ddd3c8;
-  }
+   font-style: italic;
+   
+}
   
   .form-signin {
     max-width: 330px;
