--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
 body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #ddd3c8;
-   font-style: italic;
+    background-color: #dac09a;
+   font-style: normal;
+  
+     font-family: "Afacad Flux", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 1000;
+     font-variation-settings:
+       "slnt" 0;
    
 }
+   
   
   .form-signin {
     max-width: 330px;
@@ -41,3 +48,6 @@ body {
     border-top-right-radius: 0;
   }
   
+  :root {
+    --bs-body-font-family: 'Montserrat', sans-serif;
+  }
