--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     padding-top: 40px;
     padding-bottom: 40px;
-    background-color: #dac09a;
+    background-color: #ffffff;
    font-style: normal;
   
      font-family: "Afacad Flux", sans-serif;
@@ -65,7 +65,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 20px auto;
-    border: 1px solid #cbcbcb;
+    border: 1px solid #e7e4e4;
 }
 form{
     width: 50%;
